# controller/Cmission.js
@@ -8,7 +8,6 @@ const { Op } = require('sequelize');
 
 // 로그인 된 사용자인지 아닌지 판별하려면 불러와야함
 const jwt = require('../modules/jwt');
-const authUtil = require('../middlewares/auth');
 
 // 하루가 지나는 날(00:01 분에 업데이트 되는 data)
 cron.schedule('1 0 * * *', async () => {
@@ -63,50 +62,125 @@ cron.schedule('1 0 * * *', async () => {
   }
 });
 
-// 미션 리스트
+// 유저 미션 리스트
 exports.getMission = async (req, res) => {
-  // 1. 로그인 여부
-  if (req.headers.authorization) {
-    const token = req.headers.authorization.split(' ')[1];
-    const user = await jwt.verify(token);
+  try {
+    // 1. 로그인 여부
+    if (req.headers.authorization) {
+      const token = req.headers.authorization.split(' ')[1];
+      const user = await jwt.verify(token);
 
-    // 2. 유저 닉네임/캐릭터
-    const userInfo = await User.findOne({
-      where: { uSeq: user.uSeq },
+      // 2. 유저 닉네임/캐릭터
+      const userInfo = await User.findOne({
+        where: { uSeq: user.uSeq },
+      });
+      const { uName, uCharImg } = userInfo;
+
+      // 3. 그룹별 미션 load(), group [디데이, 모임명 - join], mission [미션 제목, 미션만료x(null)], group board[미션완료여부(y) mission join]
+      const groupInfo = await GroupUser.findAll({
+        where: { uSeq: user.uSeq },
+        attributes: ['gSeq'],
+        include: [{ model: Group, attributes: ['gName', 'gDday'] }],
+      });
+
+      const gSeqArray = groupInfo.map((group) => group.gSeq);
+
+      const missionArray = await Mission.findAll({
+        attributes: ['mSeq', 'gSeq', 'mTitle'],
+        where: { gSeq: { [Op.in]: gSeqArray }, isExpired: { [Op.is]: null } },
+      });
+
+      const doneArray = await GroupBoard.findAll({
+        where: { gbIsDone: 'y' },
+        attributes: ['mSeq'],
+        include: [{ model: Mission }],
+      });
+
+      const isDoneArray = doneArray.map((done) => done.mSeq);
+
+      res.json({
+        result: true,
+        uName,
+        uCharImg,
+        groupInfo,
+        isDone: isDoneArray,
+        missionArray,
+      });
+    } else {
+      res.json({ result: false, message: '로그인 해주세요!' });
+    }
+  } catch (err) {
+    console.error(err);
+    res.json({ isSuccess: false, msg: 'error' });
+  }
+};
+
+// 그룹 미션 리스트
+exports.getGroupMission = async (req, res) => {
+  const gSeq = req.params.gSeq;
+
+  try {
+    const missionList = await Mission.findAll({
+      where: { gSeq: gSeq, isExpired: { [Op.is]: null } },
+      attributes: ['mSeq', 'gSeq', 'mTitle', 'mContent', 'mLevel'],
+      group: ['mSeq', 'gSeq'],
     });
-    const { uName, uCharImg } = userInfo;
 
-    // 3. 그룹별 미션 load(), group [디데이, 모임명 - join], mission [미션 제목, 미션만료x(null)], group board[미션완료여부(y) mission join]
-    const groupInfo = await GroupUser.findAll({
-      where: { uSeq: user.uSeq },
-      attributes: ['gSeq'],
-      include: [{ model: Group, attributes: ['gName', 'gDday'] }],
+    const Dday = await Group.findOne({
+      where: { gSeq: gSeq },
+      attributes: ['gDday'],
     });
-
-    const gSeqArray = groupInfo.map((group) => group.gSeq);
-
-    const missionArray = await Mission.findAll({
-      attributes: ['mSeq', 'gSeq', 'mTitle'],
-      where: { gSeq: { [Op.in]: gSeqArray }, isExpired: { [Op.ne]: 'y' } },
-    });
-
-    const doneArray = await GroupBoard.findAll({
-      where: { gbIsDone: 'y' },
-      attributes: ['mSeq'],
-      include: [{ model: Mission }],
-    });
-
-    const isDoneArray = doneArray.map((done) => done.mSeq);
-
+    console.log(missionList);
     res.json({
-      result: true,
-      uName,
-      uCharImg,
-      groupInfo,
-      isDone: isDoneArray,
-      missionArray,
+      missionList,
+      Dday: Dday.gDday,
     });
-  } else {
-    res.json({ result: false, message: '로그인 해주세요!' });
+  } catch (err) {
+    console.error(err);
+    res.json({ isSuccess: false, msg: 'error' });
+  }
+};
+
+// 미션 수정
+exports.editMission = async (req, res) => {
+  try {
+    const gSeq = req.params.gSeq;
+    const { mSeq, gDday, mTitle, mContent, mLevel } = req.body;
+    // 로그인 여부 확인
+    if (req.headers.authorization) {
+      let token = req.headers.authorization.split(' ')[1];
+      const user = await jwt.verify(token);
+      console.log('디코딩 된 토큰!!!!!!!!!!! :', user);
+
+      const uSeq = user.uSeq;
+
+      // 모임장 여부 확인
+      const isLeader = await GroupUser.findOne({
+        where: { gSeq, uSeq },
+        attributes: ['guIsBlackUser'],
+      });
+      if (isLeader) {
+        const task1 = Mission.update(
+          {
+            mTitle, // 미션 제목
+            mContent, // 미션 내용
+            mLevel, // 난이도 (상: 5점, 중: 3점, 하: 1점)
+          },
+          { where: { mSeq } }
+        );
+        const task2 = Group.update({ gDday }, { where: { gSeq } });
+
+        await Promise.all([task1, task2]);
+
+        res.json({ result: true, message: '수정완료' });
+      } else {
+        res.json({ result: false, message: '권한이 없어요' });
+      }
+    } else {
+      res.json({ result: false, message: '로그인 해주세요!' });
+    }
+  } catch (err) {
+    console.error(err);
+    res.json({ isSuccess: false, msg: 'error' });
   }
 };
